# AdvenceRag

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  TECHNICAL_BRIEF.md  debug_import.py  debug_summarizer.py  debug_unstructured.py  docker-compose.yml  pyproject.toml  repro_hang.py  try_ingest.py  try_ingest_local.py  verify_chroma.py  verify_chroma_add.py
docs/: sample.txt
docs/features/: future_roadmap.md  sql_persistence.md
openspec/: project.md
openspec/changes/2026-01-16-modernize-kb-search/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-12-add-hybrid-search/: design.md  proposal.md  tasks.md
openspec/changes/hardening-infrastructure/: proposal.md
openspec/specs/agents/: spec.md
openspec/specs/architecture/: spec.md
openspec/specs/evaluation/: spec.md
openspec/specs/ingestion/: spec.md
src/advence_rag/: __init__.py  agent.py  cli.py  main.py
src/advence_rag/agents/: __init__.py  agent.py  clarification.py  guard.py  orchestrator.py  planner.py  reviewer.py  search.py  writer.py
src/advence_rag/config/: __init__.py  settings.py
src/advence_rag/domain/: entities.py  interfaces.py
src/advence_rag/parsers/: __init__.py  base.py  docling_parser.py  pymupdf_parser.py  simple_parser.py  unstructured_parser.py
src/advence_rag/tools/: __init__.py  knowledge_base.py  rerank.py  summarizer.py  web_search.py
src/advence_rag/utils/: __init__.py  log_config.py  logging.py  rebuild_bm25.py  retry.py
src/advence_rag/workflows/: __init__.py  optimization.py  processing.py  rag_pipeline.py  retrieval.py
test_data/: sample.txt
tests/: conftest.py  probe_agent.py  reproduce_scheduler.py  test_openai_api.py  test_qdrant_integration.py  test_rrf_fusion.py  verify_agents.py  verify_clarification.py  verify_full_flow.py  verify_hybrid.py  verify_ingestion.py  verify_logging.py  verify_quality.py  verify_search.py  verify_search_v2.py  verify_web_search.py
tests/evaluation/: eval_results.json  golden_dataset.json  run_eval.py
tests/integration/: test_knowledge_base.py  test_retrieval_pipeline.py
tests/unit/: test_config.py  test_parsers.py  test_utils.py
(+70 files in other folders)
